--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Backend implementation based on a tutorial https://www.freecodecamp.org/news/build-youtube-with-react/\r 1. Install Postgresql to the local drive with an installer    \r 2. Move to this project folder  \r 3. Install Prisma to the folder https://www.prisma.io/docs/concepts/components/prisma-cli/installation  \r 4. Form the tutorial, create \"schema.prisma\" on the project root. The tutorial says \"prisma.schema\" but it is not correct.\r 5. Install Prisma client via \"npm install @prisma/client\". It creates a database by reading the schema file.",
   "main": "app.js",
   "dependencies": {
+    "@prisma/client": "^2.30.2",
     "express": "^4.17.1",
     "prisma": "^2.30.2"
   },
