--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@prisma/client": "^2.30.2",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "prisma": "^2.30.2"
   },
   "devDependencies": {},
